small layout bug fix for header

--- a/app/components/header/_header.scss
+++ b/app/components/header/_header.scss
@@ -36,7 +36,7 @@
     .mobile-header__title {
       h4 {
         padding: 0;
-        margin: .2em;
+        margin: .3em 1.2em 0 1em;
       }
     }
 }
